ws-slo/apps/qbittorrent/overlays/nishir/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: qbittorrent
spec:
  gatewayClassName: qbittorrent
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-qbittorrent
            group: ""
            kind: Secret
    - name: bittorrent
      port: 6881
      protocol: TCP
    - name: bittorrent-udp
      port: 6881
      protocol: UDP
